--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
   </div>
   <div class="hero-img">
-    <img src="images/profil.jpg" alt="Photo Asmae Ennali">
+    <img src="profil.jpg" alt="Photo Asmae Ennali">
   </div>
 </section>
 
@@ -114,42 +114,42 @@
   <div class="projects-container">
 <!-- Projet 1 -->
     <div class="project">
-      <img src="images/eclairage_public.jpg" alt="eclairage public" class="project-img">
+      <img src="eclairage_public.jpg" alt="eclairage public" class="project-img">
       <h3>Système d’éclairage public automatique avec Arduino</h3>
       <p>système d'éclairage public basé sur Arduino UNO capable d'allumer la lumiére just quand la lumunisité ambiante faible et la présence des personnes.</p>
       <button onclick="openModal('eclairage')">Voir Détails</button>
     </div>
 <!-- Projet 2 -->
     <div class="project">
-      <img src="images/robot_ligne.jpg" alt="Robot suiveur de ligne" class="project-img">
+      <img src="robot_ligne.jpg" alt="Robot suiveur de ligne" class="project-img">
       <h3>Robot suiveur de ligne</h3>
       <p>Robot autonome basé sur Arduino UNO capable de suivre une ligne noire grâce à des capteurs infrarouges.</p>
       <button onclick="openModal('robotLigne')">Voir Détails</button>
     </div>
 <!-- Projet 3 -->
     <div class="project">
-      <img src="images/robot_couleur.jpg" alt="Robot suiveur de couleur" class="project-img">
+      <img src="robot_couleur.jpg" alt="Robot suiveur de couleur" class="project-img">
       <h3>Robot suiveur de couleur avec capteur TCS3200</h3>
       <p>Robot mobile utilisant un capteur TCS3200 pour détecter une couleur spécifique pour suivre les indications de direction.</p>
       <button onclick="openModal('robotCouleur')">Voir Détails</button>
     </div>
 <!-- Projet 4 -->
     <div class="project">
-      <img src="images/irrigation.jpg" alt="Système d'irrigation intelligente" class="project-img">
+      <img src="irrigation.jpg" alt="Système d'irrigation intelligente" class="project-img">
       <h3>Jumeau numérique pour un système d’irrigation intelligente</h3>
       <p>Un système IoT de gestion d’eau avec ESP32, capteurs d’humidité et application mobile.</p>
       <button onclick="openModal('irrigation')">Voir Détails</button>
     </div>
 <!-- Projet 5 -->
     <div class="project">
-      <img src="images/matlab.jpg" alt="modélisation matlab" class="project-img">
+      <img src="matlab.jpg" alt="modélisation matlab" class="project-img">
       <h3>Modélisation des systèmes embarqués sous MATLAB/Simulink</h3>
       <p>Un système IoT de gestion d’eau avec ESP32, capteurs d’humidité et application mobile.</p>
       <button onclick="openModal('matlab')">Voir Détails</button>
     </div>
 <!-- Projet 6 -->
     <div class="project">
-      <img src="images/barrière.jpg" alt="barrière automatique" class="project-img">
+      <img src="barrière.jpg" alt="barrière automatique" class="project-img">
       <h3>système de barrière automatique pour les péages</h3>
       <p>Un système intelegent basé sur IOT avec ESP32.</p>
       <button onclick="openModal('barrière')">Voir Détails</button>
@@ -256,3 +256,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
