--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       <h3>compétition de robotique ROBOFZ</h3>
       <p class="cert-org">FSDM – Université Sidi Mohamed Ben Abdellah</p>
       <p class="cert-date">Décembre 2024</p>
-      <a href="certifs/robofz.pdf" target="_blank" class="cert-btn">📄 Voir Certificat</a>
+      <a href="robofz.pdf" target="_blank" class="cert-btn">📄 Voir Certificat</a>
     </div>
 
      <!-- Certification 2 -->
@@ -207,7 +207,7 @@
       <h3>certificate of AI system  </h3>
       <p class="cert-org">FSDM_Université Sidi Mohamed Ben Abdellah</p>
       <p class="cert-date">Février 2025</p>
-      <a href="certifs/ai.pdf" target="_blank" class="cert-btn">📄 Voir Certificat</a>
+      <a href="ai.pdf" target="_blank" class="cert-btn">📄 Voir Certificat</a>
     </div>
 
     <!-- Certification 3 -->
@@ -216,7 +216,7 @@
       <h3>Festival du patrimoine mondial de Fès </h3>
       <p class="cert-org">Centre culturel d'Ain Qadous </p>
       <p class="cert-date">Avril 2025</p>
-      <a href="certifs/festival.pdf" target="_blank" class="cert-btn">📄 Voir Certificat</a>
+      <a href="festival.pdf" target="_blank" class="cert-btn">📄 Voir Certificat</a>
     </div>
 
     <!-- Certification 4 -->
@@ -225,7 +225,7 @@
       <h3>compétition ARB 25</h3>
       <p class="cert-org">Ecole Nationale Superieure d'arts et metiers de MEKNES  </p>
       <p class="cert-date">Avril 2025</p>
-      <a href="certifs/arb25.pdf" target="_blank" class="cert-btn">📄 Voir Certificat</a>
+      <a href="arb25.pdf" target="_blank" class="cert-btn">📄 Voir Certificat</a>
     </div>
 
     <!-- Certification 5 -->
@@ -234,7 +234,7 @@
       <h3>Company Program</h3>
       <p class="cert-org">Cité d'innovation</p>
       <p class="cert-date">Juin 2025</p>
-      <a href="certifs/company.pdf" target="_blank" class="cert-btn">📄 Voir Certificat</a>
+      <a href="company.pdf" target="_blank" class="cert-btn">📄 Voir Certificat</a>
     </div>
 
   </div>
@@ -256,4 +256,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
