--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio - Asmae Ennali</title>
+  <title>Portfolio - Asmae En-nali</title>
   <link rel="stylesheet" href="style.css">
   <!-- Polices modernes depuis Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -256,5 +256,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
