--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio - Asmae En-nali</title>
+  <title>Portfolio - Asmae Ennali</title>
   <link rel="stylesheet" href="style.css">
   <!-- Polices modernes depuis Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -11,7 +11,7 @@
 <body>
   <!-- Header -->
   <header>
-    <h1>Asmae Ennali</h1>
+    <h1>Asmae En-nali</h1>
     <nav>
       <a href="#about">À propos</a>
       <a href="#education">Parcours</a>
@@ -256,6 +256,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
