--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!-- Section Accueil -->
 <section id="home" class="hero">
   <div class="hero-text">
-    <h1><span>Asmae Ennali</span></h1>
+    <h1><span>Asmae En-nali</span></h1>
     <h2>Étudiante en Smart Industry</h2>
     <p>Passionnée par la robotique, les systèmes embarqués et l’automatisation industrielle.</p>
     <div class="buttons">
@@ -256,6 +256,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
