--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <p>Passionnée par la robotique, les systèmes embarqués et l’automatisation industrielle.</p>
     <div class="buttons">
       <a href="#contact" class="btn-primary">Contactez-moi</a>
-      <a href="CV_asmae_ennali.pdf" download class="btn-secondary">Télécharger CV</a>
+      <a href="cv_asmae_ennali.pdf" download class="btn-secondary">Télécharger CV</a>
     </div>
   </div>
   <div class="hero-img">
@@ -256,6 +256,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
