--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
       <h3>Company Program</h3>
       <p class="cert-org">Cité d'innovation</p>
       <p class="cert-date">Juin 2025</p>
-      <a href="companyprogram.pdf" target="_blank" class="cert-btn">📄 Voir Certificat</a>
+      <a href="company.pdf" target="_blank" class="cert-btn">📄 Voir Certificat</a>
     </div>
 
   </div>
