--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <!-- Header -->
   <header>
-    <h1>Asmae Ennali</h1>
+    <h1>Asmae En-nali</h1>
     <nav>
       <a href="#about">À propos</a>
       <a href="#education">Parcours</a>
@@ -57,7 +57,7 @@
       <div class="circle"></div>
       <div class="content">
         <h3>Master en Smart Industry</h3>
-        <h4>2024 – 2025 (Dernière année)</h4>
+        <h4>2024 – 2026</h4>
         <p><em>Université Sidi Mohamed Ben Abdellah, Fès, Maroc</em></p>
         <ul>
           <li>Spécialisé en automatisation, robotique, les systèmes MES (Manufacturing Execution System), les solutions ERP, ainsi que les systèmes MOM (Manufacturing Operations Management).</li>
